src/test/ui/suggestions/clone-on-unconstrained-borrowed-type-param.rs
// run-rustfix
fn wat<T>(t: &T) -> T {
    t.clone() //~ ERROR E0308
}

fn main() {
    wat(&42);
}
